update sync_staff_to_wecom_docs code

--- a/functions/sync_staff_to_wecom_docs/.env.sample
+++ b/functions/sync_staff_to_wecom_docs/.env.sample
@@ -1,8 +1,24 @@
-APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+# appwrite releated configs
+APPWRITE_ENDPOINT=
 APPWRITE_FUNCTION_PROJECT_ID=
 APPWRITE_API_KEY=
 APPWRITE_DATABASE_ID=sync_staff_to_wecom_docs
 APPWRITE_COLLECTION_ID=dep_to_sheet
 
-YNU_API_HOST=https://api.ynu.edu.cn
+# ynu api releated configs
+YNU_API_HOST=
 YNU_API_KEY=
+
+# wecom releated configs
+CORP_ID=
+SECRET=-Ro
+
+# wecom docs releated configs
+# DOC_NAME, SPACEID, FATHERID, ADMIN_USERS only used when need to create a new doc
+DOC_NAME=教职工信息表-${dep_name}
+SPACEID=
+FATHERID=
+ADMIN_USERS=
+# SHEET_NAME only used when need to create a new sheet
+SHEET_NAME=教职工信息表-${dep_name}
+REMOVE_IRRELEVANT_RECORDS=true
