--- a/appwrite.json
+++ b/appwrite.json
@@ -23,15 +23,15 @@
         {
             "$id": "sync-staff-to-wecom-docs",
             "name": "sync-staff-to-wecom-docs",
-            "runtime": "node-20.0",
+            "runtime": "bun-1.1",
             "execute": [],
             "events": [],
             "schedule": "",
             "timeout": 15,
             "enabled": true,
             "logging": true,
-            "entrypoint": "dist/main.js",
-            "commands": "npm install && npm run build",
+            "entrypoint": "src/main.ts",
+            "commands": "bun install",
             "ignore": [
                 "node_modules",
                 ".npm"
